--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -97,7 +97,7 @@
                                         ' - ' + ingredient.getDescription())}">1 Teaspoon of Sugar</li>
                                 </ul>
                             </div>
-                            <a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients'}">View ingredient</a>
+                            <a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients'}">View ingredients</a>
                         </div>
                     </div>
                 </div>
